# ai-travel-planner

./: .dockerignore  .gitignore  AI速记卡片功能说明.md  CHANGELOG_DOCS.md  Dockerfile  Jenkinsfile  LICENSE  QUICKSTART.md  README.md  docker-compose.yml  project_env.py  rag-setup.sql  restart.ps1  start.ps1  stop.ps1  supabase-setup.sql  快速配置指南.md
.codebuddy/: todo.json
.github/workflows/: ci.yml
backend/: .env.example  README.md  index.js  package-lock.json  package.json  阿里百炼配置说明.md
backend/scripts/: .ingest_local_qwen.checkpoint.json  backfillSemanticMemories.js  ingest.js  ingest_local_qwen.py  test_rag_local_qwen.py
backend/src/: index.js  supabase.js  swagger.js
backend/tests/: aiChatServiceMemory.test.js  authMiddleware.test.js  openaiCompatibleRerankAdapter.test.js  provider-priority.test.js  providerConfigService.test.js  ragService.test.js  streamToolEvents.test.js
docker/: start-app.sh
docs/: AI聊天工具事件解析设计.md  AI聊天记忆与计划上下文实施方案.html  AI聊天记忆与计划上下文实施方案.md  AI语义记忆层设计与实现说明.md  Git双远端推送指南.md  QUICKSTART.md  RAG知识库技术文档.md  README.md  rag-embedding-flow.md  后端架构文档.md  妙笔云章分享文案功能说明.md  技术规范文档(TSD).md  数字人及AI面对面对话功能说明.md  部署指南.md  高德地图配置说明.md
docs/RAG/: RAG知识库技术文档.md
docs/ai-protocols/: AI统一流式事件协议.md  AI聊天工具事件解析设计.md  历史会话虚拟渲染实现详解.md
docs/architecture/: langchain-agent-mcp-memory-guide.md  后端架构文档.md
docs/auth/: 认证机制说明.md  (+1 more)
frontend/: .env.example  Dockerfile  amap-test.html  index.html  package-lock.json  package.json  vite.config.js  高德地图配置说明.md
training/: .env.example  README.md
tts-flask-backend/: .env.example  README.md  main.py  pyproject.toml
(+138 files in other folders)
